// Code generated by entproto. DO NOT EDIT.
syntax = "proto3";

package entpb;

import "google/protobuf/empty.proto";

import "google/protobuf/timestamp.proto";

import "google/protobuf/wrappers.proto";

option go_package = "github.com/JAORMX/fertilesoil/ent/proto/entpb";

message Directory {
  int64 id = 1;

  string name = 2;

  google.protobuf.StringValue metadata = 3;

  google.protobuf.Timestamp created_at = 4;

  google.protobuf.Timestamp updated_at = 5;

  google.protobuf.Timestamp deleted_at = 6;

  bool is_root = 7;

  repeated Directory children = 8;

  Directory parent = 9;
}

message CreateDirectoryRequest {
  Directory directory = 1;
}

message GetDirectoryRequest {
  int64 id = 1;

  View view = 2;

  enum View {
    VIEW_UNSPECIFIED = 0;

    BASIC = 1;

    WITH_EDGE_IDS = 2;
  }
}

message UpdateDirectoryRequest {
  Directory directory = 1;
}

message DeleteDirectoryRequest {
  int64 id = 1;
}

message ListDirectoryRequest {
  int32 page_size = 1;

  string page_token = 2;

  View view = 3;

  enum View {
    VIEW_UNSPECIFIED = 0;

    BASIC = 1;

    WITH_EDGE_IDS = 2;
  }
}

message ListDirectoryResponse {
  repeated Directory directory_list = 1;

  string next_page_token = 2;
}

service DirectoryService {
  rpc Create ( CreateDirectoryRequest ) returns ( Directory );

  rpc Get ( GetDirectoryRequest ) returns ( Directory );

  rpc Update ( UpdateDirectoryRequest ) returns ( Directory );

  rpc Delete ( DeleteDirectoryRequest ) returns ( google.protobuf.Empty );

  rpc List ( ListDirectoryRequest ) returns ( ListDirectoryResponse );
}
